[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/numberTiles/divider.png" type="Texture" id=1]
[ext_resource path="res://Assets/numberTiles/two.png" type="Texture" id=2]
[ext_resource path="res://Assets/numberTiles/one.png" type="Texture" id=3]
[ext_resource path="res://src/UserInterface/ScoreDisplay.gd" type="Script" id=4]
[ext_resource path="res://Assets/numberTiles/eight.png" type="Texture" id=5]
[ext_resource path="res://Assets/numberTiles/eleven.png" type="Texture" id=6]
[ext_resource path="res://Assets/numberTiles/nine.png" type="Texture" id=7]
[ext_resource path="res://Assets/numberTiles/ten.png" type="Texture" id=8]
[ext_resource path="res://Assets/numberTiles/seven.png" type="Texture" id=9]
[ext_resource path="res://Assets/numberTiles/five.png" type="Texture" id=10]
[ext_resource path="res://Assets/numberTiles/four.png" type="Texture" id=11]
[ext_resource path="res://Assets/numberTiles/three.png" type="Texture" id=12]
[ext_resource path="res://Assets/numberTiles/six.png" type="Texture" id=13]

[node name="ScoreDisplay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node" type="Node" parent="."]

[node name="divider" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -3.0
margin_top = 16.0
margin_right = 3.0
margin_bottom = 141.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="one" type="TextureRect" parent="." groups=[
"player_score_panels",
]]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -120.0
margin_top = 28.0
margin_right = -20.0
margin_bottom = 128.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="one2" type="TextureRect" parent="." groups=[
"enemy_score_panels",
]]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = 20.0
margin_top = 28.0
margin_right = 120.0
margin_bottom = 128.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="two" type="TextureRect" parent="." groups=[
"player_score_panels",
]]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -120.0
margin_top = 28.0
margin_right = -20.0
margin_bottom = 128.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="two2" type="TextureRect" parent="." groups=[
"enemy_score_panels",
]]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = 20.0
margin_top = 28.0
margin_right = 120.0
margin_bottom = 128.0
texture = ExtResource( 2 )

[node name="three" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -120.0
margin_top = 28.0
margin_right = -20.0
margin_bottom = 128.0
texture = ExtResource( 12 )

[node name="three2" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = 20.0
margin_top = 28.0
margin_right = 120.0
margin_bottom = 128.0
texture = ExtResource( 12 )

[node name="four" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -120.0
margin_top = 28.0
margin_right = -20.0
margin_bottom = 128.0
texture = ExtResource( 11 )

[node name="four2" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = 20.0
margin_top = 28.0
margin_right = 120.0
margin_bottom = 128.0
texture = ExtResource( 11 )

[node name="five" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -120.0
margin_top = 28.0
margin_right = -20.0
margin_bottom = 128.0
texture = ExtResource( 10 )

[node name="five2" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = 20.0
margin_top = 28.0
margin_right = 120.0
margin_bottom = 128.0
texture = ExtResource( 10 )

[node name="six" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -120.0
margin_top = 28.0
margin_right = -20.0
margin_bottom = 128.0
texture = ExtResource( 13 )

[node name="six2" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = 20.0
margin_top = 28.0
margin_right = 120.0
margin_bottom = 128.0
texture = ExtResource( 13 )

[node name="seven" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -120.0
margin_top = 28.0
margin_right = -20.0
margin_bottom = 128.0
texture = ExtResource( 9 )

[node name="seven2" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = 20.0
margin_top = 28.0
margin_right = 120.0
margin_bottom = 128.0
texture = ExtResource( 9 )

[node name="eight" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -120.0
margin_top = 28.0
margin_right = -20.0
margin_bottom = 128.0
texture = ExtResource( 5 )

[node name="eight2" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = 20.0
margin_top = 28.0
margin_right = 120.0
margin_bottom = 128.0
texture = ExtResource( 5 )

[node name="nine" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -120.0
margin_top = 28.0
margin_right = -20.0
margin_bottom = 128.0
texture = ExtResource( 7 )

[node name="nine2" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = 20.0
margin_top = 28.0
margin_right = 120.0
margin_bottom = 128.0
texture = ExtResource( 7 )

[node name="ten" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -120.0
margin_top = 28.0
margin_right = -20.0
margin_bottom = 128.0
texture = ExtResource( 8 )

[node name="ten2" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = 20.0
margin_top = 28.0
margin_right = 120.0
margin_bottom = 128.0
texture = ExtResource( 8 )

[node name="eleven" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -120.0
margin_top = 28.0
margin_right = -20.0
margin_bottom = 128.0
texture = ExtResource( 6 )

[node name="eleven2" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = 20.0
margin_top = 28.0
margin_right = 120.0
margin_bottom = 128.0
texture = ExtResource( 6 )
